# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16x0PEaqgf_3RNkFiTAYvEWBPz1xQTaRvKD9CCT0wpWzO8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1YtOY4yg6GqEedQwTv-n9heqwEGq3xaaRM1XPu__B898=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1hyUZ5k8XjqFqTa9F4lvmH3KVeG7MolFIfZBX4e-vAQg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xgqZBDoCQlSnUDsyhEHDS_IywPtOFXyVyS9MrmTd2V_o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1XemHpkLDsG2jRjriI-QsPNhqOkIi1ChlH5RUqLCJOo0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1CVv_Fn6a_cErQuelTtW-gz9OaFSRPryMGtZjoKyZJCA=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1AXp0F5JGbnx4dhbPfcfdiKLiZpzsdi2Qh-QdYKqJVds=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2BG_Xr0IlyABFCKVD885PVZTijzjpldjXKvwYqpS2u5Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Ixc5wNAiu0KxZpoJd5m1Njv5sCb21hdhWqFoUx3oFJw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2LutL_WMujk_KDSlqnd6HHg28p89ARRyKdIMKnlqRsiw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2_jfECdyYw388q4Z5NVWRhFa3Lzm4ezEjc4kBolTGXkE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2aMtCgdbT7HrTb6g8kVjovM_zsuZwC23HONnAy8K-vUI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1E5aZ9_fehYw6fSt_tScq6myj_-d6eNVdGx2aC6pfeso=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1NO2HVcfYsfG84BvFWBHzQWBnOmF1w9dhZMfX5eVL4dw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1_JW277HsdkoUBIwc-fs5Rlh_ZvhPmDPhrJ_XiPaNLjk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1lVzYoGr91c8XWvfeEIZbdpQ5jvMhUIy5l1pPl_UmgQ8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1mzGzNC--azxkizUIzkjlJR8msadgWFQ10afBUvVxuBM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1rRExUpAg67uP8HjM0uHpxdoHGw5Y-g6VV_PAj0d7MF4=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1VWV9dbHQKcIAhtN1me2X8z1f9JHeVFF-CYoSQrD1dTg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64Owh9Npi9kG0OFr53vXnmChtzzU6vTV1Pz3uil-bfsck=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64eA9elviyPpe4aDf2sJGUfdSv5bIL1WC9c5GakgJjTx0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x11FGzDdqaXJHCGnOB7WIDkYA-p7NxZmdzO9DIWaXE730=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x120Quts8nquDZEpPMPSV9CvZA35ufBLTCuIVjO61pZYw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x15ESidfh4mCdT4xoEf0fiFaOuH5sQAdlaQ40J1I9DwbA=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_Tn50-Ls97O2LJBdwJEDCC7hAtTGMujeAQ7PYn-9_rBA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_Uxt-gEeIkUICi1AKA0uqCZoy-ntaVaXZ60gJYjGwKCo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_gioduBRpAr-hIIxyXctrfexj1aM4POAK2MKSbiNaGTk=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32DLt8rifdTTwEiorPWkIA0f1r3Yn0EgSh2PCav5RnSWc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32VeX7cJBv7G9NceBAXrpx-mKacNH0sm-NHzjdSpTD5rA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32tgx4OkjbymJApkgI7_Sj2zmeA7YJSQDXivmS-G7Lby8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32M9aFe5VVPZ_teiAeUhk_8QoWuEDm1s03_qMcDZ0h0sQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32x1mDz2Fydou1101lZBUD6Ar8ijHp2c0lvRebadryheYg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32x5b5fakZXtv75dqRUjtgqlptKIH32NWU16Osh5Sx8hTc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT19C35JeeY-qDrrHdhgd7Va0C2swFtPIZpMjtAp3E6lAk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT19X7kPJSy59Wef9Z3WMgTsvLose5z_pkGDcDJa1OlHF0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1Ca23TPEModSClyjnn4g1E5qDzzSFI181SJ-eOQyZelo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1D3mWEpWvmyQnH2p33U0xAMtDpFY461JOXxtqEXYMn2A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1FzpkkGJIpIBVxsEPi161T7OS-SYgMalTiUeTAgdDqog=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1H3_nM0eqLE3jQSKKUJawz3C42KEGQmZccpPWRI6nglM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1EStc3x092hvUP7fmro5DgeLTNZ54Wui8d_jbUSHalWk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1I4vZ6WDpwHg31N1-egbRfLG3F8vVFQGlJpbwiK2PU2U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3kFPCvpHiPqMSGQfs66PnL_lZiJxAy9qVi9pw_1CdHvc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3sPwilggvpVIZG3DYqhMqnwY4OVJSl0E8_RavcQOI2-c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4iHinGmpo6U9XZLki6M7rkVqcxQ6ZaeP3otCR8URNjNA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4rzujJqyV9D4EA5Bal0CwBhJxQ9gEe-w10uIKXsTkNCs=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16iamdKh77SiXB_tsBpkoYVJkqXz7yJXFcFX7zLAN-4e0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16RtgaOEkRV8gTmNr339CCNhv41S6CH7M0IP134rKubs8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16pQbK8lxueBbBe5oFnbPGmVGfvw-J71kHkCknwFIc_Lc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16HzSAmeO3iAdidAF6iz7WibCBqHVFeKoTR9uYOAPPEx8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16sUXwBn3XkfnISoWST8-w6dcxuX4c9gb1b-ACCXCmITQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16mICYU5z8Zeu9GVGXH6Q23-00wl4qQS3dpU1OEZeLH-c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16iuBlVFr2UmLymPSjN3Tg2wGxkWAakfqmGQbhFQiSz3U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x1626fyQeIWhR0VKyMZB16tLOIV6cOLZSsLIXN5XLBPg-k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16j82k1qF_CMrsFJQJIwRAEjMkjf2SllvK-9iw23wVwaE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16jvqTs3KuIGVtneIVcxMdIsn2Lyf6RfbrWJU5P3-v_9Q=',
      'err': 0,
    }),
  ])
# ---
